# sympy-equation

./: .readthedocs.yaml  CONTRIBUTING.md  README.md  dotests.sh  pyproject.toml  setup.py
.github/workflows/: python-package.yml
algebra_with_sympy/: __init__.py  algebraic_equation.py
doc/: requirements.txt
doc/source/: changelog.rst  conf.py  differences.rst  doc_utils.py  index.rst  install.rst  module.rst  tutorial.ipynb
doc/source/modules/: expression_manipulation.rst  index.rst  module.rst  printing.rst
doc/source/tutorials/: index.rst  tut-0-overview.ipynb  tut-1-expression-manipulation.ipynb  tut-1-hugoniot-equation.ipynb  tut-2-snells-law.ipynb  tut-3-hugoniot-equation.ipynb  tut-4-latex-printer.ipynb
src/sympy_equation/: __init__.py  _doc_utils.py  algebraic_equation.py  doc_utils.py  preparser.py  utils.py
src/sympy_equation/printing/: __init__.py  doc_utils.py  extended_latex.py  interactive.py  latex.py  multiline_latex.py  utils.py
sympy_equation/: __init__.py  algebraic_equation.py  preparser.py
tests/: conftest.py  test_algebraic_equation.py  test_numerics.py  test_preparser.py  test_utils.py
tests/printing/: test_extended_latex.py  test_latex.py  test_multiline_latex.py
